# de-exam-ota

./: .env  .env.eaxmple  .gitignore  Dockerfile.dbt  README.md  compose.airflow-dev.yml  compose.airflow.yml  compose.dbt.yml  compose.metabase.yml  compose.postgres.yml  dbt_project.yml  pyproject.toml  taskfile.yml
.devcontainer/: .dockerignore  Dockerfile.airflow  requirements.txt
api/: models.py  server.py
config/: airflow.cfg  profiles.yml
dags/: ingest.py  pipeline.py
dbt/: dbt_project.yml
dbt/macros/: generate_alias_name.sql
dbt/models/01-silver/: silver_covid_cases_global.sql  silver_covid_cases_us.sql
dbt/models/02-gold/: ARCHITECTURE.md  FACT_TABLE_GUIDE.md  README.md  agg_country_summary.sql  agg_daily_summary.sql  agg_state_summary.sql  fct_covid_daily.sql  gold_correlation_analysis.sql  gold_correlation_from_fact.sql  gold_covid_trends_over_time.sql  gold_top_countries_by_cases.sql  gold_top_countries_from_fact.sql  gold_trends_from_fact.sql  mart_correlation_metrics.sql  mart_covid_trends.sql  mart_top_countries.sql  placeholder.sql  rpt_correlation_analysis.sql  rpt_covid_trends_over_time.sql  rpt_top_countries_by_cases.sql  schema.yml
