[project]
name = "data-engineering-workflow"
version = "0.1.0"
description = "Data Engineering Workflow."
readme = "README.md"
requires-python = ">=3.11"

# Core Docker Dependencies
dependencies = [
    "apache-airflow-providers-airbyte>=5.0.2",
    "apache-airflow-providers-http>=5.2.2",
    "apache-airflow-providers-postgres>=6.1.3",
    "polars==1.27.1",
    "pydantic>=2.11.3",
]

[dependency-groups]
dbt = [
    "dbt-postgres>=1.9.1",
]