[project]
name = "data-engineering-workflow-ota"
version = "0.1.0"
description = "Data Engineering Workflow."
readme = "README.md"
requires-python = ">=3.11"

# Core Docker Dependencies
dependencies = [
    "apache-airflow-providers-airbyte>=5.0.2",
    "apache-airflow-providers-github>=2.8.0",
    "apache-airflow-providers-http>=5.2.2",
    "apache-airflow-providers-postgres>=6.1.3",
    "pandas>=2.1.0",
    "polars==1.27.1",
    "pydantic>=2.11.3",
    "requests>=2.32.0",
]

[dependency-groups]
dbt = [
    "dbt-postgres>=1.9.1",
    "fastapi[all]>=0.115.12",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "uvicorn[standard]>=0.34.2",
]
